--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,15 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.2.0</version>
                 <executions>
+
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
                         </goals>
+
                     </execution>
+
                 </executions>
 
                 <configuration>
@@ -62,21 +65,12 @@
                         <index>true</index>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.income.RunnerClass</mainClass>
+                            <mainClass>com.app.RunnerClass</mainClass>
                         </manifest>
 
                     </archive>
                 </configuration>
             </plugin>
-
-
-
-
-
-
-
-
-
 
 
         </plugins>
